--- a/deno.json
+++ b/deno.json
@@ -1,8 +1,11 @@
 {
   "tasks": {
-    "dev": "deno run --watch main.ts"
+    "dev": "deno run --unstable-kv -A --watch main.ts"
   },
   "imports": {
-    "@std/assert": "jsr:@std/assert@1"
+    "itty-router": "npm:itty-router",
+    "@std/assert": "jsr:@std/assert@1",
+    "@std/encoding": "jsr:@std/encoding@1",
+    "@earthstar/earthstar": "jsr:@muni-town-temp/earthstar@11.0.0-beta.7.patched.1"
   }
 }
